# analog-tv-tools

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: FindGStreamer.cmake  FindLiquidDsp.cmake  FindSiglib.cmake
pytests/: CMakeLists.txt  conftest.py  decode_secam_cartoon_test_4_test.py  decode_secam_color_bars_test.py  frame_checker.py  test_decode_secam_cartoon_test_4.py  test_decode_secam_color_bars.py
scripts/windows/: kill-dialogs.ps1  start.dialog.prevention.cmd
src/: CMakeLists.txt
src/atv-tools-cli/: CMakeLists.txt  demodulator.cpp  demodulator.h  float2complex.h  main.cpp  options.cpp  options.h  raw_file_reader.cpp  raw_file_reader.h  raw_file_writer.cpp  raw_file_writer.h  snd_file_reader.cpp  snd_file_reader.h  stdafx.h  timer.h  video_writer.cpp  video_writer.h
src/gr-AnalogTV/: CMakeLists.txt  MANIFEST.md
src/gr-AnalogTV/.conda/: README.md
src/gr-AnalogTV/.conda/recipe/: meta.yaml
src/gr-AnalogTV/apps/: CMakeLists.txt
src/gr-AnalogTV/cmake/Modules/: gnuradio-AnalogTVConfig.cmake
src/gr-AnalogTV/docs/: CMakeLists.txt  README.AnalogTV
src/gr-AnalogTV/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/gr-AnalogTV/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
src/gr-AnalogTV/docs/doxygen/other/: group_defs.dox  main_page.dox
src/gr-AnalogTV/grc/: AnalogTV_TvDecode.block.yml  CMakeLists.txt
src/gr-AnalogTV/include/gnuradio/AnalogTV/: CMakeLists.txt  TvDecode.h  api.h
src/gr-AnalogTV/lib/: CMakeLists.txt  TvDecode_impl.cc  TvDecode_impl.h
src/gr-AnalogTV/python/AnalogTV/: CMakeLists.txt  __init__.py  qa_TvDecode.py
src/gr-AnalogTV/python/AnalogTV/bindings/: CMakeLists.txt  TvDecode_python.cc  python_bindings.cc
src/gr-AnalogTV/python/AnalogTV/bindings/docstrings/: TvDecode_pydoc_template.h
src/gr-AtvTools/: CMakeLists.txt  MANIFEST.yml
src/gr-AtvTools/apps/: CMakeLists.txt
src/gr-AtvTools/cmake/Modules/: gnuradio-AtvToolsConfig.cmake
src/gr-AtvTools/docs/: CMakeLists.txt  README.AtvTools
src/gr-AtvTools/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/gr-AtvTools/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
src/gr-AtvTools/docs/doxygen/other/: group_defs.dox  main_page.dox
src/gr-AtvTools/examples/: CMakeLists.txt
src/gr-AtvTools/grc/: AtvTools_AtvDecoder.block.yml  CMakeLists.txt
src/gr-AtvTools/include/gnuradio/AtvTools/: AtvDecoder.h  CMakeLists.txt  api.h
src/gr-AtvTools/lib/: AtvDecoder_impl.cc  AtvDecoder_impl.h  CMakeLists.txt
src/gr-AtvTools/python/AtvTools/: CMakeLists.txt  __init__.py
src/gr-AtvTools/python/AtvTools/bindings/: AtvDecoder_python.cc  CMakeLists.txt  python_bindings.cc
src/gr-AtvTools/python/AtvTools/bindings/docstrings/: AtvDecoder_pydoc_template.h
src/itest/: CMakeLists.txt  gstreamer_test.cpp  live555_test.cpp  main.cpp  opencv_test.cpp  stdafx.h
src/lib-atv-tools/: CMakeLists.txt
src/lib-atv-tools/include/lib-atv-tools/: color.h  color_decoder.h  color_extractor.h  cvbs.h  decoder.h  pulse_detector.h  pulse_detector2.h  secam_color_extractor.h  standard.h  test_color.h  video_buffer.h
src/lib-atv-tools/src/: decoder.cpp  secam_color_extractor.cpp  standard.cpp  stdafx.h
src/lib-dsp/: CMakeLists.txt
src/lib-dsp/include/lib-dsp/: comb_feedback.h  comb_feedforward.h  contraphase_detector.h  cross_correlation.h  delay.h  differentiator.h  fir.h  fm_demodulator.h  hilbert_demod.h  iir.h  iir_band_pass.h  iir_high_pass.h  iir_low_pass.h  integrator.h  level_corrector.h  limiter.h  low_pass_1st.h  peack_detector.h  pll.h  processor.h  pulse_detector.h  pulse_generator.h  pulse_limiter.h  quadrature_demod.h  resampler.h  sine_gen.h  threshold.h  trigger.h  type_convertor.h  unovibrator.h  utils.h
src/lib-dsp/src/: comb_feedback.cpp  comb_feedforward.cpp  fir.cpp  fm_demodulator.cpp  hilbert_demod.cpp  iir.cpp  iir_band_pass.cpp  iir_direct.cpp  iir_high_pass.cpp  iir_low_pass.cpp  pll.cpp  quadrature_demod.cpp  resampler.cpp  stdafx.h
src/utest/: CMakeLists.txt  pybind11_tests.cpp  stdafx.h  test_common.cpp  test_iir1.cpp  test_liquid_dsp.cpp
